Fix plot titles

--- a/Eruption-Products-Mapping.ipynb
+++ b/Eruption-Products-Mapping.ipynb
@@ -635,7 +635,7 @@
     "    fig3,ax3 = plt.subplots(figsize=(12,8))\n",
     "    ax3.imshow(zoom.THERM, cmap='Greys_r',\n",
     "               origin='upper', extent=extent)\n",
-    "    ax.set_title('Thermal')\n",
+    "    ax3.set_title('Thermal')\n",
     "    return(zoom,extent)"
    ]
   },
