Corrected figure labels
Natural and false color composite images

--- a/Eruption-Products-Mapping.ipynb
+++ b/Eruption-Products-Mapping.ipynb
@@ -629,7 +629,7 @@
     "    fig2,ax2 = plt.subplots(figsize=(12,8))\n",
     "    ax2.imshow(np.dstack((zoom.GREEN,zoom.NIR,zoom.SWIR)),\n",
     "               origin='upper', extent=extent)\n",
-    "    ax.set_title('False Color Composite')\n",
+    "    ax2.set_title('False Color Composite')\n",
     "\n",
     "    #thermal\n",
     "    fig3,ax3 = plt.subplots(figsize=(12,8))\n",
